[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "billkit-python"
dynamic = ["version"]
description = "Python client for Billkitco API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Billkit", email = "billkitco@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://billkit.co"
Repository = "https://github.com/billkitco/billkit-python"
"Issue Tracker" = "https://github.com/billkitco/billkit-python/issues"

dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
