[build-system]
requires = ["setuptools>=61", "setuptools_scm>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "billkit-python"
dynamic = ["version"]
description = "Python client for Billkitco API"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Billkit", email = "billkitco@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://billkit.co"
Repository = "https://github.com/billkitco/billkit-python"
"Bug Tracker" = "https://github.com/billkitco/billkit-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/billkit/version.py"
root = "."

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
